<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.jmbenso2.csis_application.MainActivity">

        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/imageDescriptionPioneer"
            android:adjustViewBounds="true"
            android:id="@+id/pioneerImage"
            android:src="@drawable/pioneer">

        </ImageView>
        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pioneerImage"
            android:text="@string/mission"
            android:id="@+id/missionTitle" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_below="@id/missionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missionContent"
            android:id="@+id/missionText" />
        <ImageView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/missionText"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/imageDescriptionStudent"
            android:id="@+id/studentImage"
            android:src="@drawable/inaction">
        </ImageView>
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_below="@id/studentImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courses"
            android:id="@+id/coursesTitle" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_below="@id/coursesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coursesContent"
            android:id="@+id/coursesText" />
        <TextView
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_below="@id/coursesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/differences"
            android:id="@+id/differencesTitle" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_below="@id/differencesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/differencesContent"
            android:id="@+id/differencesText" />
        <Button
            android:layout_marginTop="10dp"
            android:layout_below="@id/differencesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faculty"
            android:id="@+id/buttonFaculty"
            android:onClick="onClickFaculty"
            />
        <Button
            android:layout_below="@id/buttonFaculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courseGrid"
            android:id="@+id/buttonCourseGrid"
            android:onClick="onClickCourseGrid"
            />

    </RelativeLayout>
</ScrollView>
