<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jonathanbenson.csis_application.FacultyActivity">

    <!-- first teacher -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/imageDescriptionCho"
            android:id="@+id/prof1Image"
            android:src="@drawable/cho">
        </ImageView>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prof1Title"
                android:text="@string/prof1Name">
            </TextView>
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prof1Bio"
                android:text="@string/prof1Bio">
            </TextView>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >
        <ImageView android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/imageDescriptionBidgoli"
            android:layout_height="wrap_content"
            android:id="@+id/prof2Image"
            android:src="@drawable/bidgoli">
        </ImageView>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prof2Title"
                android:text="@string/prof2Name">
            </TextView>
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prof2Bio"
                android:text="@string/prof2Bio">
            </TextView>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >
        <ImageView android:layout_width="wrap_content"
            android:contentDescription="@string/imageDescriptionCorser"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/prof3Image"
            android:src="@drawable/corser">
        </ImageView>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prof3Title"
                android:text="@string/prof3Name">
            </TextView>
            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/prof3Bio"
                android:text="@string/prof3Bio">
            </TextView>
        </LinearLayout>

    </LinearLayout>

    <Button android:id="@+id/facultyBackButton"
        android:onClick="onClickBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back">
    </Button>
</LinearLayout>
